VNet Creation/04. Vnet.tf
# VNET Creation
resource "azurerm_virtual_network" "vnet" {
  name                = "${var.prefix}-vnet"
  location            = var.location
  resource_group_name = var.resource_group_name
  address_space       = var.vnet_address_space
  tags = {
    environment = "Production"
  }
}
